--- a/activities/econ-words/game.html
+++ b/activities/econ-words/game.html
@@ -578,7 +578,7 @@
     <!-- Header -->
     <header>
         <div class="banner-container">
-            <img src="../../images/banner25.png" alt="Economics Terms Banner" class="banner-image" id="game-banner">
+            <img src="../../images/banner25.png" alt="Economics Terms Banner" class="banner-image" id="game-banner" onerror="this.src='../../images/banner15.png'; console.log('Fallback to banner15')">
             <div class="banner-overlay">
                 <div class="container">
                     <div class="nav-links">
@@ -731,11 +731,19 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
 
+    <!-- Supabase Scripts -->
+    <script src="https://unpkg.com/@supabase/supabase-js@2.38.4/dist/umd/supabase.js"></script>
+    <script src="../../js/env.js"></script>
+    <script src="../../js/supabase-init.js"></script>
+    <script src="../../activities/investment-odyssey/js/service-adapter.js"></script>
+    <script src="../../activities/investment-odyssey/js/supabase-auth.js"></script>
+
     <!-- Game Scripts - Using traditional JavaScript -->
     <!-- Load in the correct order to avoid reference errors -->
     <script src="js/simple-terms-loader.js"></script>
     <script src="js/simple-game-over.js"></script>
     <script src="js/simple-ui.js"></script>
+    <script src="js/supabase-integration.js"></script>
     <script src="js/simple-game.js"></script>
     <!-- Initialize after all scripts are loaded -->
     <script src="js/init.js"></script>
