--- a/activities/econ-words/index.html
+++ b/activities/econ-words/index.html
@@ -196,16 +196,18 @@
         <div class="row mb-4">
             <div class="col-md-8 mx-auto mb-4">
                 <div class="card game-card h-100">
-                    <img src="../../images/banner25.png" class="card-img-top game-image" alt="Economics Terms">
+                    <img src="../../images/banner25.png" class="card-img-top game-image" alt="Econ Words">
                     <div class="card-body text-center">
-                        <h5 class="card-title">Economics Terms</h5>
-                        <p class="card-text">Test your knowledge of economic concepts, terms, policies, and variables.</p>
-                        <div class="mt-3">
-                            <a href="game.html?type=econ" class="btn btn-primary">Random Term</a>
-                            <a href="game.html?type=econ&daily=true" class="btn btn-outline-primary ml-2">Daily Term</a>
+                        <h5 class="card-title">Econ Words</h5>
+                        <p class="card-text">Test your knowledge of economic concepts, terms, policies, and variables in this word puzzle game.</p>
+                        <div class="mt-4">
+                            <a href="game.html" class="btn btn-primary btn-lg">Play Now</a>
                         </div>
-                        <div class="mt-2">
-                            <span class="badge badge-light">Includes important economic terms and concepts</span>
+                        <div class="mt-3">
+                            <a href="game.html?daily=true" class="btn btn-outline-primary">Try Daily Challenge</a>
+                        </div>
+                        <div class="mt-3">
+                            <span class="badge badge-light">Includes important economic terms and concepts from your textbook</span>
                         </div>
                     </div>
                 </div>
