--- a/activities/econ-words/game.html
+++ b/activities/econ-words/game.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Economics Terms - Macroeconomics Course</title>
+    <title>Econ Words - Macroeconomics Course</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="../../styles.css">
@@ -578,7 +578,7 @@
     <!-- Header -->
     <header>
         <div class="banner-container">
-            <img src="../../images/banner25.png" alt="Economics Terms Banner" class="banner-image" id="game-banner" onerror="this.src='../../images/banner15.png'; console.log('Fallback to banner15')">
+            <img src="../../images/banner25.png" alt="Econ Words Banner" class="banner-image" id="game-banner" onerror="this.src='../../images/banner15.png'; console.log('Fallback to banner15')">
             <div class="banner-overlay">
                 <div class="container">
                     <div class="nav-links">
@@ -586,15 +586,16 @@
                             <a href="../../index.html" class="nav-link">Home</a>
                             <a href="../../games.html" class="nav-link">Games</a>
                             <a href="index.html" class="nav-link">Econ Words</a>
-                            <a href="game.html" class="nav-link active" id="game-type-link">Economics Terms</a>
+                            <a href="game.html" class="nav-link active" id="game-type-link">Econ Words</a>
                         </div>
                         <div class="nav-links-right">
                             <div class="user-info" id="user-info-container">
                                 <span class="user-name" id="user-name-display">Guest</span>
+                                <button id="sign-out-btn" class="sign-out-btn ml-2">Sign Out</button>
                             </div>
                         </div>
                     </div>
-                    <h1 class="activity-title" id="game-title">Economics Terms</h1>
+                    <h1 class="activity-title" id="game-title">Econ Words</h1>
                     <p class="text-white opacity-75">Guess the economic term based on hints</p>
                 </div>
             </div>
