--- a/activities/econ-words/game.html
+++ b/activities/econ-words/game.html
@@ -61,6 +61,25 @@
             color: white;
             font-weight: 600;
         }
+
+        .sign-out-btn {
+            background-color: rgba(255, 255, 255, 0.2);
+            color: white;
+            border: 1px solid rgba(255, 255, 255, 0.4);
+            border-radius: 4px;
+            padding: 4px 10px;
+            font-size: 0.9rem;
+            cursor: pointer;
+            transition: all 0.2s;
+        }
+
+        .sign-out-btn:hover {
+            background-color: rgba(255, 255, 255, 0.3);
+        }
+
+        .ml-2 {
+            margin-left: 0.5rem;
+        }
         .activity-title {
             font-size: 2.5rem;
             font-weight: 400;
