--- a/activities/econ-words/game.html
+++ b/activities/econ-words/game.html
@@ -764,6 +764,7 @@
     <script src="js/simple-game-over.js"></script>
     <script src="js/simple-ui.js"></script>
     <script src="js/supabase-integration.js"></script>
+    <script src="js/leaderboard.js"></script>
     <script src="js/simple-game.js"></script>
     <!-- Initialize after all scripts are loaded -->
     <script src="js/init.js"></script>
