--- a/activities/econ-words/game.html
+++ b/activities/econ-words/game.html
@@ -604,8 +604,8 @@
                         <div class="nav-links-left">
                             <a href="../../index.html" class="nav-link">Home</a>
                             <a href="../../games.html" class="nav-link">Games</a>
-                            <a href="index.html" class="nav-link">Econ Words</a>
-                            <a href="game.html" class="nav-link active" id="game-type-link">Econ Words</a>
+                            <a href="index.html" class="nav-link">Game Selection</a>
+                            <a href="game.html" class="nav-link active" id="game-type-link">Play Game</a>
                         </div>
                         <div class="nav-links-right">
                             <div class="user-info" id="user-info-container">
@@ -757,6 +757,9 @@
     <script src="../../js/supabase-init.js"></script>
     <script src="../../activities/investment-odyssey/js/service-adapter.js"></script>
     <script src="../../activities/investment-odyssey/js/supabase-auth.js"></script>
+    
+    <!-- Authentication Fallback -->
+    <script src="js/auth-fallback.js"></script>
 
     <!-- Game Scripts - Using traditional JavaScript -->
     <!-- Load in the correct order to avoid reference errors -->
