--- a/activities/econ-words/game.html
+++ b/activities/econ-words/game.html
@@ -606,6 +606,7 @@
                             <a href="../../games.html" class="nav-link">Games</a>
                             <a href="index.html" class="nav-link">Game Selection</a>
                             <a href="game.html" class="nav-link active" id="game-type-link">Play Game</a>
+                            <a href="leaderboard.html" class="nav-link">Leaderboard</a>
                         </div>
                         <div class="nav-links-right">
                             <div class="user-info" id="user-info-container">
