--- a/activities/econ-words/index.html
+++ b/activities/econ-words/index.html
@@ -147,6 +147,8 @@
                             <a href="../../index.html" class="nav-link">Home</a>
                             <a href="../../games.html" class="nav-link">Games</a>
                             <a href="index.html" class="nav-link active">Econ Words</a>
+                            <a href="game.html" class="nav-link">Play Game</a>
+                            <a href="leaderboard.html" class="nav-link">Leaderboard</a>
                         </div>
                         <div class="nav-links-right">
                             <!-- User info (shown when logged in) -->
@@ -205,6 +207,7 @@
                         </div>
                         <div class="mt-3">
                             <a href="game.html?daily=true" class="btn btn-outline-primary">Try Daily Challenge</a>
+                            <a href="leaderboard.html" class="btn btn-outline-secondary ml-2"><i class="fas fa-trophy mr-1"></i>Leaderboard</a>
                         </div>
                         <div class="mt-3">
                             <span class="badge badge-light">Includes important economic terms and concepts from your textbook</span>
