--- a/activities/econ-words/leaderboard.html
+++ b/activities/econ-words/leaderboard.html
@@ -405,7 +405,7 @@
     <script src="js/auth-fallback.js"></script>
     
     <!-- Leaderboard Scripts -->
-    <script src="js/supabase-integration.js"></script>
+    <script src="js/supabase-integration-fixed.js"></script>
     <script src="js/leaderboard.js"></script>
 
     <!-- Initialize Authentication -->
