--- a/activities/econ-words/game.html
+++ b/activities/econ-words/game.html
@@ -767,7 +767,7 @@
     <script src="js/simple-terms-loader.js"></script>
     <script src="js/simple-game-over.js"></script>
     <script src="js/simple-ui.js"></script>
-    <script src="js/supabase-integration.js"></script>
+    <script src="js/supabase-integration-fixed.js"></script>
     <script src="js/leaderboard.js"></script>
     <script src="js/simple-game.js"></script>
     <!-- Initialize after all scripts are loaded -->
