--- a/activities/econ-words/game.html
+++ b/activities/econ-words/game.html
@@ -756,12 +756,10 @@
     <script src="https://unpkg.com/@supabase/supabase-js@2.38.4/dist/umd/supabase.js"></script>
     <script src="../../js/env.js"></script>
     <script src="../../js/supabase-init.js"></script>
-    <script src="../../activities/investment-odyssey/js/service-adapter.js"></script>
-    <script src="../../activities/investment-odyssey/js/supabase-auth.js"></script>
     
-    <!-- Authentication Fallback -->
-    <script src="js/auth-fallback.js"></script>
-
+    <!-- Econ Words Authentication - Our new unified auth service -->
+    <script src="js/econ-words-auth.js"></script>
+    
     <!-- Game Scripts - Using traditional JavaScript -->
     <!-- Load in the correct order to avoid reference errors -->
     <script src="js/simple-terms-loader.js"></script>
