--- a/activities/econ-words/leaderboard.html
+++ b/activities/econ-words/leaderboard.html
@@ -398,11 +398,9 @@
     <script src="https://unpkg.com/@supabase/supabase-js@2.38.4/dist/umd/supabase.js"></script>
     <script src="../../js/env.js"></script>
     <script src="../../js/supabase-init.js"></script>
-    <script src="../../activities/investment-odyssey/js/service-adapter.js"></script>
-    <script src="../../activities/investment-odyssey/js/supabase-auth.js"></script>
     
-    <!-- Authentication Fallback -->
-    <script src="js/auth-fallback.js"></script>
+    <!-- Econ Words Authentication - Our new unified auth service -->
+    <script src="js/econ-words-auth.js"></script>
     
     <!-- Leaderboard Scripts -->
     <script src="js/supabase-integration-fixed.js"></script>
