--- a/activities/econ-words/game.html
+++ b/activities/econ-words/game.html
@@ -760,6 +760,9 @@
     <!-- Econ Words Authentication - Our new unified auth service -->
     <script src="js/econ-words-auth.js"></script>
     
+    <!-- Authentication initialization - New file to ensure proper auth setup -->
+    <script src="js/auth-init.js"></script>
+    
     <!-- Game Scripts - Using traditional JavaScript -->
     <!-- Load in the correct order to avoid reference errors -->
     <script src="js/simple-terms-loader.js"></script>
