--- a/activities/econ-words/game.html
+++ b/activities/econ-words/game.html
@@ -768,7 +768,8 @@
     
     <!-- Game Scripts - Using traditional JavaScript -->
     <!-- Load in the correct order to avoid reference errors -->
-    <script src="js/simple-terms-loader.js"></script>
+    <script src="js/econ-terms-data-backup.js"></script>
+    <script src="js/simple-terms-loader-fixed.js"></script>
     <script src="js/simple-game-over.js"></script>
     <script src="js/simple-ui.js"></script>
     <script src="js/leaderboard.js"></script>
