Fix Econ Words authentication to work with main site Auth system

--- a/activities/econ-words/debug.html
+++ b/activities/econ-words/debug.html
@@ -142,8 +142,15 @@
     <!-- Include required scripts -->
     <script src="https://unpkg.com/@supabase/supabase-js@2.39.3/dist/umd/supabase.js"></script>
     <script src="js/env.js"></script>
+
+    <!-- Main site authentication scripts -->
+    <script src="../../js/supabase-init.js"></script>
+    <script src="../investment-odyssey/js/service-adapter.js"></script>
+    <script src="../investment-odyssey/js/supabase-auth.js"></script>
+
     <script src="js/supabase-client.js"></script>
     <script src="js/auth.js"></script>
+    <script src="js/auth-bridge.js"></script>
     <script src="js/database.js"></script>
     <script src="js/supabase-diagnostics.js"></script>
 
