--- a/activities/econ-words/game.html
+++ b/activities/econ-words/game.html
@@ -248,11 +248,19 @@
     <!-- Environment setup -->
     <script src="js/env.js"></script>
 
+    <!-- Main site authentication scripts -->
+    <script src="../../js/supabase-init.js"></script>
+    <script src="../investment-odyssey/js/service-adapter.js"></script>
+    <script src="../investment-odyssey/js/supabase-auth.js"></script>
+
     <!-- Supabase client initialization -->
     <script src="js/supabase-client.js"></script>
 
     <!-- Authentication module -->
     <script src="js/auth.js"></script>
+
+    <!-- Auth Bridge -->
+    <script src="js/auth-bridge.js"></script>
 
     <!-- Database module -->
     <script src="js/database.js"></script>
