--- a/activities/econ-words/game.html
+++ b/activities/econ-words/game.html
@@ -242,13 +242,15 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
 
+
     <!-- Supabase Scripts -->
     <script src="https://unpkg.com/@supabase/supabase-js@2.39.3/dist/umd/supabase.js"></script>
 
     <!-- Environment setup -->
     <script src="js/env.js"></script>
 
-
+    <!-- Global Supabase client initialization for shared auth system -->
+    <script src="js/supabase-init-global.js"></script>
 
     <!-- Shared Auth System from Investment Odyssey -->
     <script src="../investment-odyssey/js/service-adapter.js"></script>
