--- a/activities/econ-words/debug.html
+++ b/activities/econ-words/debug.html
@@ -143,13 +143,14 @@
     <script src="https://unpkg.com/@supabase/supabase-js@2.39.3/dist/umd/supabase.js"></script>
     <script src="js/env.js"></script>
 
-    <!-- Main site authentication scripts -->
-    <script src="../../js/supabase-init.js"></script>
+    <!-- Global Supabase client initialization for shared and legacy code -->
+    <script src="js/supabase-init-global.js"></script>
+
+    <!-- Shared Auth System from Investment Odyssey (must come after global client init) -->
     <script src="../investment-odyssey/js/service-adapter.js"></script>
     <script src="../investment-odyssey/js/supabase-auth.js"></script>
 
-    <script src="js/supabase-client.js"></script>
-    <script src="js/auth.js"></script>
+    <!-- Removed deprecated supabase-client.js and auth.js -->
     <script src="js/auth-bridge.js"></script>
     <script src="js/database.js"></script>
     <script src="js/supabase-diagnostics.js"></script>
