--- a/activities/econ-words/test-auth.html
+++ b/activities/econ-words/test-auth.html
@@ -217,8 +217,7 @@
     <!-- Include required scripts -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="js/env.js"></script>
-    <script src="js/supabase-client.js"></script>
-    <script src="js/auth.js"></script>
+    <!-- Removed deprecated supabase-client.js and auth.js -->
     <script src="js/database.js"></script>
     <script src="js/supabase-diagnostics.js"></script>
     
