--- a/activities/econ-words/game.html
+++ b/activities/econ-words/game.html
@@ -22,8 +22,7 @@
                     <a href="../index.html" class="nav-link">Activities</a>
                 </div>
                 <div class="nav-links-right">
-                    <span class="nav-link">Welcome, <span id="user-name">Guest</span></span>
-                    <button id="sign-out-btn" class="sign-out-btn">Sign Out</button>
+                    <span class="nav-link">Local Game</span>
                 </div>
             </div>
             <h1 class="activity-title">Economics Terms Challenge</h1>
@@ -103,12 +102,12 @@
                 <!-- Game Stats Card -->
                 <div class="card game-stats-card mb-4">
                     <div class="card-header bg-primary text-white">
-                        <h5 class="mb-0">Econ Words Leaderboard</h5>
+                        <h5 class="mb-0">Your Stats</h5>
                     </div>
                     <div class="card-body">
                         <div class="mb-3">
                             <div class="stats-row">
-                                <span>Your Best Score:</span>
+                                <span>Best Score:</span>
                                 <span id="user-best-score" class="stats-value">-</span>
                             </div>
                             <div class="stats-row">
@@ -119,55 +118,7 @@
                                 <span>Games Played:</span>
                                 <span id="user-games-played" class="stats-value">-</span>
                             </div>
-                            <div class="stats-row">
-                                <span>Your Rank:</span>
-                                <span id="user-rank" class="stats-value">-</span>
-                            </div>
                         </div>
-
-                        <h6 class="mb-2">Top Scores</h6>
-                        <div class="leaderboard-filter mb-2">
-                            <select id="time-filter" class="form-control form-control-sm">
-                                <option value="all">All Time</option>
-                                <option value="day">Last 24 Hours</option>
-                                <option value="week">This Week</option>
-                                <option value="month">This Month</option>
-                            </select>
-                        </div>
-
-                        <div class="table-responsive">
-                            <table class="table table-sm leaderboard-table">
-                                <thead>
-                                    <tr>
-                                        <th>#</th>
-                                        <th class="leaderboard-sort" data-sort="user_name">
-                                            Player
-                                            <span class="sort-indicator">↕</span>
-                                        </th>
-                                        <th class="leaderboard-sort text-center" data-sort="score">
-                                            Score
-                                            <span class="sort-indicator">↓</span>
-                                        </th>
-                                        <th class="leaderboard-sort text-center" data-sort="attempts">
-                                            Tries
-                                            <span class="sort-indicator">↕</span>
-                                        </th>
-                                        <th class="leaderboard-sort" data-sort="created_at">
-                                            Date
-                                            <span class="sort-indicator">↕</span>
-                                        </th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td colspan="5" class="text-center">Loading scores...</td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                        <button id="refresh-leaderboard" class="btn btn-sm btn-outline-secondary">
-                            <i class="fas fa-sync-alt mr-1"></i>Refresh
-                        </button>
                     </div>
                 </div>
 
@@ -244,74 +195,11 @@
 
 
 
-    <!-- Supabase Scripts -->
-    <script src="https://unpkg.com/@supabase/supabase-js@2.39.3/dist/umd/supabase.js"></script>
-
-    <!-- Environment setup (must set window.supabaseUrl and window.supabaseKey) -->
-    <script src="js/env.js"></script>
-
-    <!-- Global Supabase client initialization for shared and legacy code -->
-    <script src="js/supabase-init-global.js"></script>
-
-    <!-- Shared Auth System from Investment Odyssey (must come after global client init) -->
-    <script src="../investment-odyssey/js/service-adapter.js"></script>
-    <script src="../investment-odyssey/js/supabase-auth.js"></script>
-    <!-- Sync Supabase session from Auth after all auth scripts are loaded -->
-    <script>
-      window.addEventListener('DOMContentLoaded', function() {
-        // Wait a tick for Auth to be ready
-        setTimeout(function() {
-          if (window.syncSupabaseSessionFromAuth) {
-            window.syncSupabaseSessionFromAuth();
-          }
-        }, 500);
-      });
-    </script>
-    <!-- Debug: Show Supabase and Auth state -->
-    <script>
-      window.addEventListener('DOMContentLoaded', function() {
-        setTimeout(function() {
-          const supa = window.supabase;
-          const supaClient = window.supabaseClient;
-          const auth = window.Auth;
-          console.log('[DEBUG] window.supabase:', supa);
-          console.log('[DEBUG] window.supabaseClient:', supaClient);
-          console.log('[DEBUG] window.Auth:', auth);
-          if (supa && typeof supa.auth?.getSession === 'function') {
-            supa.auth.getSession().then(({ data, error }) => {
-              if (error) {
-                console.warn('[DEBUG] Supabase getSession error:', error);
-              } else {
-                console.log('[DEBUG] Supabase session:', data?.session);
-              }
-            });
-          }
-        }, 1000);
-      });
-    </script>
-
-    <!-- Auth Bridge (keeps compatibility with main site Auth system) -->
-    <script src="js/auth-bridge.js"></script>
-
-
-    <!-- Database module -->
-    <script src="js/database.js"></script>
     <!-- Terms data -->
     <script src="js/terms-data.js"></script>
-    <!-- Leaderboard module -->
-    <script src="js/leaderboard.js"></script>
     <!-- Game logic -->
     <script src="js/game.js"></script>
 
-    <!-- Handle sign out -->
-    <script>
-        // Set up sign out button
-        document.getElementById('sign-out-btn').addEventListener('click', function() {
-            if (window.Auth && typeof window.Auth.logout === 'function') {
-                window.Auth.logout();
-                window.location.reload();
-            }
-        });
-    </script>
+
 </body>
 </html>
