--- a/activities/econ-words/game.html
+++ b/activities/econ-words/game.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="../../styles.css">
     <link rel="stylesheet" href="css/econ-words.css">
+    <link rel="stylesheet" href="css/game.css">
 </head>
 <body>
     <!-- Banner -->
