--- a/activities/econ-words/game.html
+++ b/activities/econ-words/game.html
@@ -95,6 +95,18 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- Game Control Buttons -->
+                    <div class="game-controls">
+                        <button class="btn btn-restart" id="restart-game-btn">
+                            <i class="fas fa-redo"></i>
+                            Restart Game
+                        </button>
+                        <button class="btn btn-next" id="next-word-btn">
+                            <i class="fas fa-forward"></i>
+                            Next Word
+                        </button>
+                    </div>
                 </div>
             </div>
 
