--- a/activities/econ-words/game.html
+++ b/activities/econ-words/game.html
@@ -113,50 +113,66 @@
             <!-- Stats & Leaderboard column -->
             <div class="col-lg-4">
                 <!-- Game Stats Card -->
-                <div class="card game-stats-card mb-4">
-                    <div class="card-header bg-primary text-white">
-                        <h5 class="mb-0">Your Stats</h5>
+                <div class="card game-stats-card">
+                    <div class="card-header">
+                        <h5 class="mb-0"><i class="fas fa-chart-line mr-2"></i>Your Stats</h5>
                     </div>
                     <div class="card-body">
-                        <div class="mb-3">
-                            <div class="stats-row">
-                                <span>Best Score:</span>
-                                <span id="user-best-score" class="stats-value">-</span>
-                            </div>
-                            <div class="stats-row">
-                                <span>Current Streak:</span>
-                                <span id="user-current-streak" class="stats-value">-</span>
-                            </div>
-                            <div class="stats-row">
-                                <span>Games Played:</span>
-                                <span id="user-games-played" class="stats-value">-</span>
-                            </div>
+                        <div class="stats-row">
+                            <span><i class="fas fa-trophy mr-2"></i>Best Score</span>
+                            <span id="user-best-score" class="stats-value">-</span>
+                        </div>
+                        <div class="stats-row">
+                            <span><i class="fas fa-fire mr-2"></i>Current Streak</span>
+                            <span id="user-current-streak" class="stats-value">-</span>
+                        </div>
+                        <div class="stats-row">
+                            <span><i class="fas fa-gamepad mr-2"></i>Games Played</span>
+                            <span id="user-games-played" class="stats-value">-</span>
                         </div>
                     </div>
                 </div>
 
                 <!-- How to Play Card -->
-                <div class="card mb-4">
+                <div class="card how-to-play-card">
                     <div class="card-header">
-                        <h5 class="mb-0">How to Play</h5>
+                        <h5 class="mb-0"><i class="fas fa-question-circle mr-2"></i>How to Play</h5>
                     </div>
                     <div class="card-body">
                         <p>Guess the economics term in 6 tries or less:</p>
                         <ul>
-                            <li>Each guess must match the number of letters in the term</li>
-                            <li>Green tiles show correct letters in the right position</li>
-                            <li>Yellow tiles show correct letters in the wrong position</li>
-                            <li>Gray tiles show letters that aren't in the term</li>
+                            <li>
+                                <span class="d-flex align-items-center">
+                                    <span class="color-example color-green"></span>
+                                    Correct letters in right position
+                                </span>
+                            </li>
+                            <li>
+                                <span class="d-flex align-items-center">
+                                    <span class="color-example color-yellow"></span>
+                                    Correct letters in wrong position
+                                </span>
+                            </li>
+                            <li>
+                                <span class="d-flex align-items-center">
+                                    <span class="color-example color-gray"></span>
+                                    Letters not in the term
+                                </span>
+                            </li>
+                            <li>Each guess must match the term length</li>
                             <li>Multi-word terms and spaces are supported</li>
                         </ul>
-                        <hr>
-                        <p><strong>Scoring</strong></p>
-                        <ul>
-                            <li>Fewer attempts = more points</li>
-                            <li>Longer terms = more points</li>
-                            <li>Multi-word terms = bonus points</li>
-                            <li>Longer streaks = more points</li>
-                        </ul>
+                        
+                        <div class="scoring-section">
+                            <p><strong><i class="fas fa-star mr-2"></i>Scoring</strong></p>
+                            <ul>
+                                <li>+100 points per remaining attempt</li>
+                                <li>+50 points per letter in term</li>
+                                <li>+100 points per word (multi-word bonus)</li>
+                                <li>+25 points per streak level</li>
+                                <li>Time bonus up to 1500 points</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
