--- a/activities/econ-words/game.html
+++ b/activities/econ-words/game.html
@@ -130,6 +130,11 @@
                             <span><i class="fas fa-gamepad mr-2"></i>Games Played</span>
                             <span id="user-games-played" class="stats-value">-</span>
                         </div>
+                        <div class="stats-footer mt-2 pt-2 border-top text-center">
+                            <button id="reset-stats-btn" class="btn btn-sm btn-outline-danger">
+                                <i class="fas fa-eraser mr-1"></i>Reset Stats
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
