--- a/activities/index.html
+++ b/activities/index.html
@@ -170,6 +170,50 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Activity 4 Card -->
+            <div class="bg-white rounded-lg shadow-md overflow-hidden">
+                <div class="h-2 bg-blue-600"></div>
+                <div class="p-6">
+                    <h3 class="text-xl font-medium mb-2">Fiscal Balance Game</h3>
+                    <p class="text-gray-600 mb-4">Interactive game where students balance fiscal policy decisions and understand the trade-offs between different economic objectives.</p>
+                    <div class="flex items-center text-sm text-gray-500 mb-3">
+                        <span>May 13-16, 2025</span>
+                    </div>
+                    <div class="flex flex-wrap gap-1 mb-4">
+                        <span class="text-xs px-2 py-1 rounded-full bg-blue-100 text-blue-800">Fiscal Policy</span>
+                        <span class="text-xs px-2 py-1 rounded-full bg-blue-100 text-blue-800">Government Budget</span>
+                        <span class="text-xs px-2 py-1 rounded-full bg-blue-100 text-blue-800">Economic Trade-offs</span>
+                    </div>
+                    <div class="mt-4">
+                        <a href="fiscal-balance/index.html" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 mr-2">Start Activity</a>
+                        <a href="fiscal-balance/ta-dashboard.html" class="inline-block bg-teal-600 text-white px-4 py-2 rounded hover:bg-teal-700 mr-2">TA Dashboard</a>
+                        <a href="Discussion_Activity_4.pdf" class="inline-block bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700" target="_blank"><i class="fas fa-file-pdf mr-1"></i> PDF</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Activity 5 Card -->
+            <div class="bg-white rounded-lg shadow-md overflow-hidden">
+                <div class="h-2 bg-purple-600"></div>
+                <div class="p-6">
+                    <h3 class="text-xl font-medium mb-2">AI Exam Generator</h3>
+                    <p class="text-gray-600 mb-4">Interactive AI-powered exam preparation session where students practice with AI tutors, reflect on learning, and create collaborative study guides.</p>
+                    <div class="flex items-center text-sm text-gray-500 mb-3">
+                        <span>May 20-23, 2025</span>
+                    </div>
+                    <div class="flex flex-wrap gap-1 mb-4">
+                        <span class="text-xs px-2 py-1 rounded-full bg-purple-100 text-purple-800">AI Learning</span>
+                        <span class="text-xs px-2 py-1 rounded-full bg-purple-100 text-purple-800">Exam Prep</span>
+                        <span class="text-xs px-2 py-1 rounded-full bg-purple-100 text-purple-800">Collaborative Study</span>
+                    </div>
+                    <div class="mt-4">
+                        <a href="activity5/index.html" class="inline-block bg-purple-600 text-white px-4 py-2 rounded hover:bg-purple-700 mr-2">Start Activity</a>
+                        <a href="activity5/ta-dashboard.html" class="inline-block bg-teal-600 text-white px-4 py-2 rounded hover:bg-teal-700 mr-2">TA Dashboard</a>
+                        <a href="Discussion_Activity_5.pdf" class="inline-block bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700" target="_blank"><i class="fas fa-file-pdf mr-1"></i> PDF</a>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!-- Games Section -->
