Update activities index page to include AI Study Prompt Generator

--- a/activities/index.html
+++ b/activities/index.html
@@ -105,7 +105,34 @@
 
     <!-- Main Content -->
     <main class="container mx-auto py-8 px-4">
-        <!-- Activity Cards -->
+        <!-- AI Study Tools Section -->
+        <h2 class="text-2xl font-semibold mb-6">AI Study Tools</h2>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mb-12">
+            <!-- AI Prompt Generator Card -->
+            <div class="bg-white rounded-lg shadow-md overflow-hidden">
+                <div class="h-2 bg-gradient-to-r from-purple-600 to-pink-600"></div>
+                <div class="p-6">
+                    <h3 class="text-xl font-medium mb-2">AI Study Prompt Generator</h3>
+                    <p class="text-gray-600 mb-4">Practice teaching macroeconomics concepts to AI and get graded on your explanations. Perfect for exam preparation!</p>
+                    <div class="flex items-center text-sm text-gray-500 mb-3">
+                        <span><i class="fas fa-robot mr-1"></i> Available Now</span>
+                    </div>
+                    <div class="flex flex-wrap gap-1 mb-4">
+                        <span class="text-xs px-2 py-1 rounded-full bg-purple-100 text-purple-800">AI Learning</span>
+                        <span class="text-xs px-2 py-1 rounded-full bg-purple-100 text-purple-800">Exam Prep</span>
+                        <span class="text-xs px-2 py-1 rounded-full bg-purple-100 text-purple-800">Teaching Practice</span>
+                    </div>
+                    <div class="mt-4">
+                        <a href="ai-prompt-generator.html" class="inline-block bg-gradient-to-r from-purple-600 to-pink-600 text-white px-4 py-2 rounded hover:from-purple-700 hover:to-pink-700 transition-all">
+                            <i class="fas fa-brain mr-1"></i> Start Practicing
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Discussion Activities Section -->
+        <h2 class="text-2xl font-semibold mb-6">Discussion Activities</h2>
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mb-8">
             <!-- Activity 1 Card -->
             <div class="bg-white rounded-lg shadow-md overflow-hidden">
