Final cleanup: Update Activity 5 navigation link and remove standalone ai-prompt-generator.html
- Updated activities index to point to activity5/index.html instead of ai-prompt-generator.html
- Removed redundant standalone ai-prompt-generator.html file
- Activity 5 AI Study Prompt Generator now fully integrated into standard activity structure

--- a/activities/index.html
+++ b/activities/index.html
@@ -105,34 +105,7 @@
 
     <!-- Main Content -->
     <main class="container mx-auto py-8 px-4">
-        <!-- AI Study Tools Section -->
-        <h2 class="text-2xl font-semibold mb-6">AI Study Tools</h2>
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mb-12">
-            <!-- AI Prompt Generator Card -->
-            <div class="bg-white rounded-lg shadow-md overflow-hidden">
-                <div class="h-2 bg-gradient-to-r from-purple-600 to-pink-600"></div>
-                <div class="p-6">
-                    <h3 class="text-xl font-medium mb-2">AI Study Prompt Generator</h3>
-                    <p class="text-gray-600 mb-4">Practice teaching macroeconomics concepts to AI and get graded on your explanations. Perfect for exam preparation!</p>
-                    <div class="flex items-center text-sm text-gray-500 mb-3">
-                        <span><i class="fas fa-robot mr-1"></i> Available Now</span>
-                    </div>
-                    <div class="flex flex-wrap gap-1 mb-4">
-                        <span class="text-xs px-2 py-1 rounded-full bg-purple-100 text-purple-800">AI Learning</span>
-                        <span class="text-xs px-2 py-1 rounded-full bg-purple-100 text-purple-800">Exam Prep</span>
-                        <span class="text-xs px-2 py-1 rounded-full bg-purple-100 text-purple-800">Teaching Practice</span>
-                    </div>
-                    <div class="mt-4">
-                        <a href="ai-prompt-generator.html" class="inline-block bg-gradient-to-r from-purple-600 to-pink-600 text-white px-4 py-2 rounded hover:from-purple-700 hover:to-pink-700 transition-all">
-                            <i class="fas fa-brain mr-1"></i> Start Practicing
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- Discussion Activities Section -->
-        <h2 class="text-2xl font-semibold mb-6">Discussion Activities</h2>
+        <!-- Activity Cards -->
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mb-8">
             <!-- Activity 1 Card -->
             <div class="bg-white rounded-lg shadow-md overflow-hidden">
@@ -224,20 +197,19 @@
             <div class="bg-white rounded-lg shadow-md overflow-hidden">
                 <div class="h-2 bg-purple-600"></div>
                 <div class="p-6">
-                    <h3 class="text-xl font-medium mb-2">AI Exam Generator</h3>
-                    <p class="text-gray-600 mb-4">Interactive AI-powered exam preparation session where students practice with AI tutors, reflect on learning, and create collaborative study guides.</p>
+                    <h3 class="text-xl font-medium mb-2">AI Study Prompt Generator</h3>
+                    <p class="text-gray-600 mb-4">Practice teaching concepts and create multiple choice questions with AI assistance to enhance learning and test preparation.</p>
                     <div class="flex items-center text-sm text-gray-500 mb-3">
                         <span>May 20-23, 2025</span>
                     </div>
                     <div class="flex flex-wrap gap-1 mb-4">
                         <span class="text-xs px-2 py-1 rounded-full bg-purple-100 text-purple-800">AI Learning</span>
-                        <span class="text-xs px-2 py-1 rounded-full bg-purple-100 text-purple-800">Exam Prep</span>
-                        <span class="text-xs px-2 py-1 rounded-full bg-purple-100 text-purple-800">Collaborative Study</span>
+                        <span class="text-xs px-2 py-1 rounded-full bg-purple-100 text-purple-800">Teaching Practice</span>
+                        <span class="text-xs px-2 py-1 rounded-full bg-purple-100 text-purple-800">Question Creation</span>
                     </div>
                     <div class="mt-4">
                         <a href="activity5/index.html" class="inline-block bg-purple-600 text-white px-4 py-2 rounded hover:bg-purple-700 mr-2">Start Activity</a>
                         <a href="activity5/ta-dashboard.html" class="inline-block bg-teal-600 text-white px-4 py-2 rounded hover:bg-teal-700 mr-2">TA Dashboard</a>
-                        <a href="Discussion_Activity_5.pdf" class="inline-block bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700" target="_blank"><i class="fas fa-file-pdf mr-1"></i> PDF</a>
                     </div>
                 </div>
             </div>
