Update Activity 5 card: Replace TA Dashboard with PDF link
- Removed TA Dashboard link from Activity 5 card
- Added Discussion_Activity_5.pdf link with red styling and PDF icon
- Activity 5 now matches the format of other activities (Start Activity + PDF buttons)

--- a/activities/index.html
+++ b/activities/index.html
@@ -200,7 +200,7 @@
                     <h3 class="text-xl font-medium mb-2">AI Study Prompt Generator</h3>
                     <p class="text-gray-600 mb-4">Practice teaching concepts and create multiple choice questions with AI assistance to enhance learning and test preparation.</p>
                     <div class="flex items-center text-sm text-gray-500 mb-3">
-                        <span>May 20-23, 2025</span>
+                        <span>June 2-6, 2025</span>
                     </div>
                     <div class="flex flex-wrap gap-1 mb-4">
                         <span class="text-xs px-2 py-1 rounded-full bg-purple-100 text-purple-800">AI Learning</span>
@@ -209,7 +209,7 @@
                     </div>
                     <div class="mt-4">
                         <a href="activity5/index.html" class="inline-block bg-purple-600 text-white px-4 py-2 rounded hover:bg-purple-700 mr-2">Start Activity</a>
-                        <a href="activity5/ta-dashboard.html" class="inline-block bg-teal-600 text-white px-4 py-2 rounded hover:bg-teal-700 mr-2">TA Dashboard</a>
+                        <a href="Discussion_Activity_5.pdf" class="inline-block bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700" target="_blank"><i class="fas fa-file-pdf mr-1"></i> PDF</a>
                     </div>
                 </div>
             </div>
